istio/node-pod-research-v2.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-research-v2
  labels:
      app: pod-research
      version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-research
  template:
    metadata:
      labels:
        app: pod-research
        version: v2
    spec:
      containers:
      - name: pod-research
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          periodSeconds: 2
          initialDelaySeconds: 0
          timeoutSeconds: 300
        image: panupongdeve/node-pods-research:v0.0.2
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 600m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
