istio/node-pod-research.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-research
spec:
  type: NodePort
  selector:
      app: pod-research
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http-webservice
