istio/node-pod-research.destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pod-research-destination
spec:
  host: pod-research
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: LEAST_CONN
      connectionPool:
        http:
          idleTimeout: 30ms
  - name: v2
    labels:
      version: v2
